# toy_raytracer

./: CMakeLists.txt
src/: camera.h  hitable.h  main.cpp  material.h  random_generator.h  ray.h  stb_image_write.h
